--- a/app/view/index.html
+++ b/app/view/index.html
@@ -7,10 +7,9 @@
 <body>
 <div>
   <div class='center'>
-    <div class='title'>Classify Bear Images 🐻</div>
+    <div class='title'>Classify Soybean Root Images</div>
     <p>
-      Use images of <strong>teddy</strong> bears, <strong>black</strong> bears, <strong>grizzly</strong> bears, or
-      all three!
+      Now, you have the ability to classify soybean root images as either <strong>Resistant</strong> or <strong>Susceptible</strong>
     </p>
     <div class='content'>
       <div class='no-display'>
